# SM3-Fortran

./: LICENSE  README-CN.md  README.md  fpm.toml  meson.build
GmSSL/: LICENSE  fpm.toml
GmSSL/example/: md5test.c
GmSSL/include/gmssl/: endian.h  error.h  hex.h  md5.h  sm3.h
GmSSL/src/: hex.c  md5.c  sm3.c
doc/: changelog-2022.md
example/: demo.f90  demo_md5.f90  demo_sm3.f90  example_md5.f90  example_sm3.f90
src/: SM3.f90
